PR/54767: elo: fix incorrect test (mlelstv) Add symbolic constants and reference to the standard.